# CatamaranProject

./: .gitignore  CMakeCache.txt  CMakeLists.txt  CMakelists.txt  LICENSE  Makefile  README.md  cmake_install.cmake  notes.txt  requirements.txt
computer_vision/: distance.py
include/catamaran/: thrusters.hpp  utility.hpp
model/: detector.py  pupil_tags.py  test.py
scripts/: pi-push
src/: catamaran.cpp  laptop.cpp  thrusters.cpp
